Fixed Alignments

--- a/melodex/src/App.css
+++ b/melodex/src/App.css
@@ -37,7 +37,7 @@ html, body{
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 3rem;
   object-fit: contain;
 }
 
@@ -76,12 +76,13 @@ html, body{
 }
 
 .nav{
-  padding-left: 1rem;
+  position: fixed;
+  background: #333;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  gap: 1rem;
-  background-color: #333;
+  justify-content: space-between;
+  width: 100%;
+  height: 7%;
 }
 
 .nav a{
@@ -92,43 +93,72 @@ html, body{
 .nav h1{
   color: white;
   text-decoration: none;
+  margin-left: 1rem;
 }
 
 .nav input{
   margin: 1rem;
   height: 1.5rem;
+  width: 15rem;
   border-radius: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
+.nav img{
+  position: absolute;
+  right: 9%;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+  transition: transform 0.5s ease-in-out;
+}
+
+.nav img:hover{
+  transform: Scale(1.15);
+}
+
+.LogoContainer{
+  font-size: 1rem;
+}
+
+.SearchContainer{
+  position: absolute;
+  right: 50%;
+  transform: translateX(50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  object-fit: contain;
+}
+
 .SongContainer{
   position: fixed;
   left: 1rem;
-  bottom: 0.5%;
   display: flex;
   align-items: center;
+  bottom: 0.2%;
 }
 
 .SongContainer img{
   width: 3rem;
-  height: 3rem;
   border-radius: 50%;
 }
 
 .SongContainer ul{
   margin: 0;
-  margin-right: 3rem;
   padding-left: 1rem;
   display: block;
-  width: 3rem;
+  width: 6rem;
   list-style: none;
   color: white;
+  overflow: hidden;
 }
 
 .SongContainer p{
-  padding-left: 2rem;
   color: white;
+  padding-left: 2rem;
 }
 
 @media (max-width: 768px) {
